--- a/css/secciones.css
+++ b/css/secciones.css
@@ -5,7 +5,14 @@
 }
 .cont
 {
-    background-color: #0e0e0e;
+    background-color: #5b5b5b;
     width: 100%;
     height: 99%;
+    display: flex;
+    align-items: flex-end;
+}
+.div
+{
+    width: 100%;
+    height: 89vh;
 }
