--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -1,16 +1,18 @@
 @font-face {
-    font-family: Hanson-Bold ;
-    src: url(../recursos/fuentes/Hanson-Bold.otf);
+    font-family: SCHABO;
+    src: url("../recursos/fuentes/SCHABO-Condensed.otf");
 }
 .cabecera
 {
     z-index: 1;
-    position: fixed;
     width: 100%;
     height: 10vh;
+    position: fixed;
+    background:linear-gradient(0deg,#7a7a7a,#2a2a2a);
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
 }
 .cabecera_center
 {
@@ -18,7 +20,6 @@
     height: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 .cabecera_item
 {
@@ -27,38 +28,39 @@
 .logo
 {
     width: 40%;
-    border: solid 1px black;
 }
 .menu
 {
-    width: 50%;
+    width: 40%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Nunito', sans-serif;
+    font-family: SCHABO;
+    font-size: 2.5vh;
+    color: #fefefe;
 }
 .menu_item
 {
-    color:#ffffff;
-    font-weight: bold;
-    animation: texto 5s infinite;
+    transition: transform 500ms ease-in-out;
+    cursor: pointer;
 }
-@keyframes texto 
+.menu_item svg
 {
-    0%
-    {
-        text-shadow: 0 0 60px rgb(255, 255, 255),0 0 35px rgb(255, 255, 255),0 0 20px rgb(255, 255, 255);
-    }  
-    25%
-    {
-        text-shadow: 0 0 40px rgb(255, 255, 255),0 0 15px rgb(255, 255, 255),0 0 0px rgb(255, 255, 255);
-    } 
-    50%
-    {
-        text-shadow: 0 0 70px rgb(255, 255, 255),0 0 45px rgb(255, 255, 255),0 0 30px rgb(255, 255, 255);
-    } 
-    75%
-    {
-        text-shadow: 0 0 50px rgb(255, 255, 255),0 0 25px rgb(255, 255, 255),0 0 10px rgb(255, 255, 255);
-    }   
+    position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #fefefe;
+  transform-origin: center bottom;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+.menu_item:hover
+{
+    transform: scale(1.2);
+}
+.menu_item:hover svg
+{
+    transform: scaleX(1);
 }
