--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -8,7 +8,7 @@
     width: 100%;
     height: 10vh;
     position: fixed;
-    background:linear-gradient(0deg,#7a7a7a,#2a2a2a);
+    background:rgba(66, 66, 66, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
