--- a/css/slider.css
+++ b/css/slider.css
@@ -37,8 +37,7 @@
     left: 0;
     width: 250px;
     height: 90vh;
-    background: linear-gradient(0deg,#007414,#089803) ;
-    opacity: 50%;
+    background: rgba(8, 152, 3, 0.5) ;
     transition: left 500ms ease-in-out;
     display: none;
     justify-content: center;
