--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -4,15 +4,13 @@
 }
 .cabecera
 {
-    z-index: 1;
+    z-index: 2;
     width: 100%;
     height: 10vh;
     position: fixed;
-    background:rgba(66, 66, 66, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
 }
 .cabecera_center
 {
@@ -39,21 +37,21 @@
     align-items: center;
     font-family: SCHABO;
     font-size: 2.5vh;
-    color: #fefefe;
+    color: #000000;
 }
 .menu_item
 {
-    transition: transform 500ms ease-in-out;
+    transition: transform 500ms ease-in-out,color 500ms ease-in-out;
     cursor: pointer;
 }
-.menu_item svg
+.esevege
 {
     position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 2px;
-  background-color: #fefefe;
+  background-color: #000000;
   transform-origin: center bottom;
   transform: scaleX(0);
   transition: transform 0.3s ease-in-out;
@@ -65,4 +63,33 @@
 .menu_item:hover svg
 {
     transform: scaleX(1);
+}
+.cabecera i
+{
+    display: flex;
+}
+.fa-lightbulb
+{
+    position: absolute;
+    color: black;
+    font-size: 3vh;
+    top: 35%;
+    right: 2%;
+    border: 1px solid;
+    border-radius: 50%;
+    width: 4vh;
+    height: 4vh;
+    text-shadow: 0px 0px 10px #ffff00,0px 0px 20px #ffff00, 0px 0px 30px #ffff00;
+    transition: color 500ms ease-in-out, text-shadow 500ms ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0);
+    backdrop-filter: blur(5px);
+    box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
+}
+.focoApagado
+{
+    color: #fff;
+    text-shadow: 0px 0px 10px #ffffff,0px 0px 20px #ffffff, 0px 0px 30px #ffffff;
 }
