--- a/css/resp.css
+++ b/css/resp.css
@@ -1,19 +1,48 @@
-@media screen and (max-width:1000px) 
-{
+@media screen and (max-width:1000px) {
+
     /*cabecera y slider*/
-    .menu_item 
-    {display: none;}
-    .cabecera_center
-    {
+    .menu_item {
+        display: none;
+    }
+
+    .cabecera_center {
         width: 98%;
     }
-    .button-menu ,.sliderMenu
-    {
+
+    .button-menu,
+    .sliderMenu {
         display: flex;
     }
+
     /*footer*/
-    footer 
-    {
+    footer {
         display: none
-    };
+    }
+
+    /*INICIO*/
+    .inicio_cont_secciones {
+        flex-direction: column;
+    }
+
+    .inicio_areas {
+        width: 100%;
+        height: 50%;
+    }
+
+    .cont1 {
+        width: 90%;
+        height: 90%;
+    }
+
+    .text h1 {
+        font-size: 6vh;
+    }
+
+    .text h2 {
+        font-size: 2.2vh;
+    }
+
+    .legend {
+        font-size: 2.5vh;
+    }
 }
