--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -71,7 +71,7 @@
 .fa-lightbulb
 {
     position: absolute;
-    color: black;
+    color: #ffff00;
     font-size: 3vh;
     top: 35%;
     right: 2%;
@@ -84,7 +84,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(0, 0, 0, 1);
     backdrop-filter: blur(5px);
     box-shadow: 0px 0px 10px 0px rgb(0, 0, 0);
 }
