--- a/css/inicio.css
+++ b/css/inicio.css
@@ -71,7 +71,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     font-family: GOSHASANS;
 }
 .cont1::before
@@ -120,18 +120,10 @@
         transform: rotate(-360deg);
     }   
 }
-.text h1
+p
 {
-    font-size: 10vh;
-    text-shadow: 0px 0px 5px rgba(28,233,248,0.6),0px 0px 15px rgba(28,233,248,0.6),0px 0px 30px rgba(28,233,248,0.6);
-}
-.text h2
-{
-    font-size: 4vh;
-    text-shadow: 0px 0px 5px rgba(28,233,248,0.6),0px 0px 15px rgba(28,233,248,0.6),0px 0px 30px rgba(28,233,248,0.6);
-}
-.legend
-{
-    font-size: 5vh;
+    font-family: GOSHASANS;
+    font-size: 3vh;
+    text-align: center;
     text-shadow: 0px 0px 5px rgba(28,233,248,0.6),0px 0px 15px rgba(28,233,248,0.6),0px 0px 30px rgba(28,233,248,0.6);
 }
