--- a/css/resp.css
+++ b/css/resp.css
@@ -33,16 +33,23 @@
         width: 90%;
         height: 90%;
     }
-
-    .text h1 {
-        font-size: 6vh;
+    /*obras*/
+    .cont_obras
+    {
+        flex-direction: column;
     }
-
-    .text h2 {
-        font-size: 2.2vh;
+    .sector_obras
+    {
+        width: 100%;
+        height: 50%;
     }
-
-    .legend {
-        font-size: 2.5vh;
+    .absoluto2
+    {
+        background: linear-gradient(180deg,transparent 50%, transparent 0%);
+        flex-direction: column;
+    }
+    .absoluto2black
+    {
+        background: linear-gradient(180deg,transparent 50%, transparent 0%);
     }
 }
