--- a/css/contacto.css
+++ b/css/contacto.css
@@ -46,3 +46,42 @@ form input, form select, form button
     font-weight: lighter;
     font-size: 3vh;
 }
+.redes_cont
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contenedor_redes
+{
+    text-transform: uppercase;
+    font-family: SCHABO;
+    color: #fff;
+    width: 50%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, .7);
+    border-radius: 3%;
+    box-shadow: 10px 10px 10px 5px rgba(66, 66, 66, .7);
+}
+.contenedor_redes h2
+{
+    font-weight: lighter;
+    margin-bottom: 10%;
+}
+.redes
+{
+    display: flex;
+    width: 60%;
+    height: 30%;
+    align-items: center;
+    justify-content: space-between;
+    border: none;
+}
+.redes i
+{
+    font-size: 5vh;
+}
