--- a/css/clientes.css
+++ b/css/clientes.css
@@ -13,6 +13,7 @@
    clip-path: polygon(0% 0%, 50% 10%, 100% 0%, 100% 100%, 0% 100%);
    display: flex;
    align-items: flex-end;
+   transition: background-color 500ms ease-in-out;
 }
 .clientes_sec
 { 
@@ -20,7 +21,6 @@
     width: 100%;
     height: 90vh;
     display: flex;
-    border: solid 1px;
 }
 .secciones_clientes
 {
@@ -60,14 +60,17 @@
 .clientes_texto h2
 {
     font-family: SCHABO;
+    font-weight: lighter;
     font-size: 7vh;
     margin: 10px 0;
+    transition: color 500ms ease-in-out;
 }
 .clientes_texto p
 {
     font-size: 3vh;
     font-family: GoshaSans-Regular;
     margin: 10px 0;
+    transition: color 500ms ease-in-out;
 }
 .clientes_texto legend
 {
@@ -75,12 +78,14 @@
     font-family: GoshaSans-Regular;
     margin: 10px 0;
     align-self: center;
+    transition: color 500ms ease-in-out;
 }
-.clientes_texto button
+.btn-cliente
 {
     padding: 30px;
     align-self: center;
     font-family: GoshaSans-Regular;
     background-color: #000;
     color: #fff;
+    transition: color 500ms ease-in-out,background-color 500ms ease-in-out;
 }
