--- a/css/obras.css
+++ b/css/obras.css
@@ -77,3 +77,101 @@
     font-size: 2vw;
     transition: color 500ms ease-in-out;
 }
+/*div Servicios*/
+.divServiciosCard
+{
+    position: fixed;
+    top: 12.5vh;
+    left: 2.5vw;
+    width:95vw;
+    height:85vh;
+    background-color: rgba(0, 0, 0, .7);
+    color: #000;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.divServiciosCard2
+{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    backdrop-filter: blur(7px);
+    overflow: hidden;
+    justify-content: space-around;
+}
+.btnServiciosCard
+{
+    z-index: 1;
+    position: absolute;
+    top: .5vh;
+    right: .5vh;
+    width: 3vh;
+    height: 3vh;
+}
+
+.divServiciosCard2 h2
+{
+    padding:2% 0 0 3%;
+    font-size: 10vh;
+    font-family: SCHABO;
+    font-weight: lighter;
+}
+.divServiciosCard2 p
+{
+    width: 90%;
+    padding:1%;
+    align-self: center;
+    font-family: GOSHASANS;
+    background-color: rgba(66, 66, 66, .7);
+    border-radius: 15px;
+    color: #fff;
+    font-size: 3vh;
+}
+.divServiciosCard2 h4
+{
+    padding:1% 0 0 3%;
+    font-size: 4vh;
+    font-family: SCHABO;
+    font-weight: lighter;
+    background-color: #fff;
+    width: 20ch;
+    border-top: 3px solid #000;
+    border-right: 3px solid #000;
+}
+.divServiciosCard2 ul
+{
+    width: 80%;
+    height: 20%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-self: center;
+}
+.divServiciosCard2 li
+{
+    width: 30%;
+    font-size: 2.5vh;
+    font-family: GOSHASANS;
+    color: #000;
+    display: flex;
+    align-items: center;
+}
+.divServiciosCard2 img
+{
+    width: 10%;
+    filter: grayscale(100%);
+    margin: 0 10px;
+    border-radius: 50%;
+}
+.divServiciosCard2 ul::before
+{
+    content: "";
+    position: absolute;
+    width: 300%;
+    height: 300%;
+    background-color: aqua;
+    top: -10px;
+    left: -100;
+}
