--- a/css/obras.css
+++ b/css/obras.css
@@ -152,6 +152,7 @@
 .divServiciosCard2 li
 {
     width: 30%;
+    height: 30%;
     font-size: 2.5vh;
     font-family: GOSHASANS;
     color: #000;
