--- a/css/inicio.css
+++ b/css/inicio.css
@@ -32,7 +32,7 @@
 }
 .inicio_derecha
 {
-    background-image: url("../recursos/imagenes/LOGO-CELESTE-MARINO.png");
+    background-image: url("../recursos/imagenes/logo.webp");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
