--- a/css/inicio.css
+++ b/css/inicio.css
@@ -73,6 +73,7 @@
     align-items: center;
     justify-content: space-around;
     font-family: GOSHASANS;
+    padding: 3%;
 }
 .cont1::before
 {
@@ -122,7 +123,7 @@
 }
 .text p
 {
-    font-family: GOSHASANS;
+    font-family: Raleway, sans-serif;
     font-size: 3vh;
     text-align: center;
     text-shadow: 0px 0px 5px rgba(28,233,248,0.6),0px 0px 15px rgba(28,233,248,0.6),0px 0px 30px rgba(28,233,248,0.6);
