--- a/css/inicio.css
+++ b/css/inicio.css
@@ -84,7 +84,7 @@
     width: 100%;
     height: 100%;
     transform-origin: bottom right;
-    background:linear-gradient(0deg,transparent ,transparent, #26ff00, #26ff00, #26ff00) ;
+    background:linear-gradient(0deg,transparent ,transparent, #40f2fe, #40f2fe, #40f2fe) ;
     animation: anima 2s linear infinite;
 }
 .cont2::before
@@ -96,7 +96,7 @@
     width: 100%;
     height: 100%;
     transform-origin: bottom right;
-    background:linear-gradient(0deg,transparent ,transparent,  #26ff00, #26ff00, #26ff00) ;
+    background:linear-gradient(0deg,transparent ,transparent,  #40f2fe, #40f2fe, #40f2fe) ;
     animation: anima2 2s linear infinite;
 }
 @keyframes anima 
