--- a/css/splash.css
+++ b/css/splash.css
@@ -13,6 +13,7 @@
     background-size: cover;
     border: solid 10px #D3B505;
     border-radius: 15px;
+    transition:background-image 500ms ease-in-out ;
 }
 .splashPane object
 {
