--- a/css/resp.css
+++ b/css/resp.css
@@ -135,9 +135,8 @@
     }
     .splashPane
     {
-        width: 90vw;
-        height: 50vh;
-        top: 25vh;
+        width: 100vw;
+        height: 100%;
         box-shadow: 10px  10px  10px  10px  rgba(0, 0, 0, 0.7);
     }
     .fa-square-xmark
