--- a/css/splash.css
+++ b/css/splash.css
@@ -1,24 +1,16 @@
 .splashPane
 {
-    position: absolute;
-    width: 90vw;
-    height: 90vh;
-    top: 5vh;
-    left: 5vw;
-    z-index: 100;
-    background-color: black;
-    overflow: hidden;
-    background-image: url("../recursos/splash/splash1.jpeg");
-    background-position: center;
-    background-size: cover;
-    border: solid 10px #D3B505;
-    border-radius: 15px;
-    transition:background-image 500ms ease-in-out ;
-}
-.splashPane object
-{
+    position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, .8);
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .fa-square-xmark
 {
@@ -26,6 +18,45 @@
     top: 2vh;
     left: 2vw;
     font-size:5vh;
+    z-index: 101;
     cursor: pointer;
     color: #D3B505;
 }
+
+.galeria-container {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  #contenido-grande {
+    width: 100%;
+    height: 80%;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* Estilos adicionales */
+  }
+  #contenido-grande > * 
+  {
+    height: 100%;
+  }
+  
+  .slider {
+    display: flex;
+    justify-content: space-between;
+    /* Estilos adicionales */
+  }
+  
+  .opcion {
+    width: 24px;
+    height: 50px;
+    background: #ccc;
+    margin: 20px;
+    /* Estilos adicionales */
+  }
+  
