--- a/css/splash.css
+++ b/css/splash.css
@@ -53,10 +53,38 @@
   }
   
   .opcion {
-    width: 24px;
+    width: 50px;
     height: 50px;
     background: #ccc;
     margin: 20px;
     /* Estilos adicionales */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .cinta
+  {
+    position: absolute;
+  
+  }
+  .cinta svg
+  {
+    background-color: aliceblue;
+  }
+  .opcion:nth-child(1)
+  {
+    background-image: url("../recursos/splash/uno.jpeg");
+  }
+  .opcion:nth-child(2)
+  {
+    background-image: url("../recursos/splash/splash2.jpeg");
+  }
+  .opcion:nth-child(3)
+  {
+    background-image: url("../recursos/splash/tres.jpeg");
+  }
+  .opcion:nth-child(4)
+  {
+    background-image: url("../recursos/splash/cuatro.jpeg");
   }
   
