--- a/css/splash.css
+++ b/css/splash.css
@@ -53,6 +53,7 @@
   }
   
   .opcion {
+    z-index: 101;
     width: 50px;
     height: 50px;
     background: #ccc;
@@ -65,11 +66,8 @@
   .cinta
   {
     position: absolute;
+    z-index: 10;
   
-  }
-  .cinta svg
-  {
-    background-color: aliceblue;
   }
   .opcion:nth-child(1)
   {
