--- a/css/resp.css
+++ b/css/resp.css
@@ -135,12 +135,14 @@
     }
     .splashPane
     {
-        width: 100vw;
-        height: 100%;
+        width: 80vw;
+        height: 80%;
+        top: 10%;
+        left: 10%;
         box-shadow: 10px  10px  10px  10px  rgba(0, 0, 0, 0.7);
     }
     .fa-square-xmark
     {
-        left: 72vw;
+        left:65vw;
     }
 }
